--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "aos": "^2.3.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "noty": "^3.2.0-beta-deprecated",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
